# bls-census-housing-analysis

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml  test_env.py
data/: README.md  TODO  cbsamonthly_202501_cleaned.csv  rebuild.sql  sample.json
data/derived/: annual_metrics.parquet  annual_permits.parquet  annual_wages.parquet  cumulative_metrics.parquet
data/ingest/: ingest_dim_metro_full.sql
data/raw/: cbsamonthly_202501.xls  metros.csv  tb3u201901.txt
scripts/: censustest.ipynb  duckdb_sql.ipynb  housing.ipynb  parquet_db.ipynb  parquetify_nb.ipynb  run_sql.py  samplecode.ipynb
scripts/data/cache/: C4266_2025_1.csv
src/bls_housing/: __init__.py  build_data.py  census_cache.py  census_txt_format_cache.py  census_txt_parser.py  helper.py  logging_config.py  main.py  qcew_cache.py
src/bls_housing/pipeline/: duck.py  ensure.py  marts.py  parquetify.py  permits.py  wages.py
src/notebook_proj/: main.py
