[project]
name = "bls_housing"
version = "1.3.0"
description = "Lightweight Python utilities and notebooks for fetching, caching, and analyzing CBSA-level wage and housing supply data from BLS QCEW and Census BPS."
authors = [
	{ name = "Eric Kangas", email = "kangas.eric4152@gmail.com" }
]
readme = "README.md"
packages = [{ include = "bls_housing", from = "src" }]
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "duckdb (>=1.4.3,<1.5.0)",
    "nbstripout (>=0.9.0,<0.10.0)",
    "nbdime (>=4.0.3,<5.0.0)"
]
[project.scripts]
build-data = "bls_housing.build_data:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]


